Modified the Hyperlink

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <button class="l drum">l</button>
     </div>
     <footer>
-        Made with ❤️ by <a href="https://www.adwait.space" style="color: #fff"><em>Adwait</em></a>.
+        Made with ❤️ by <a href="/" style="color: #fff"><em>Adwait</em></a>.
     </footer>
     <script src="index.js" charset="utf-8"></script>
 </body>
